--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy - Pulse Run</title>
+  <title>Privacy Policy - Square Sprint</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -27,13 +27,13 @@
 
   <h1>Privacy Policy</h1>
 
-  <p><strong>Pulse Run</strong> does not collect, store, or share any personal user data.</p>
+  <p><strong>Square Sprint</strong> does not collect, store, or share any personal user data.</p>
   
   <h2>Data Storage</h2>
   <p>All user preferences, habits, and app data are stored locally on your device. No external servers or cloud storage are used.</p>
 
   <h2>Children's Privacy</h2>
-  <p>Pulse Run is not intended for children under the age of 13. We do not knowingly collect personal information from minors.</p>
+  <p>Square Sprint is not intended for children under the age of 13. We do not knowingly collect personal information from minors.</p>
 
   <h2>Changes to This Policy</h2>
   <p>This privacy policy may be updated periodically. Any changes will be posted on this page.</p>
